# vyasa

./: .bloggy  .bloggy-rbac.db  .bloggy.example  .gitignore  .graphify  .sesskey  .vyasa-rbac.db  ACL_HANDOFF.md  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN-Ultra-soft.md  DESIGN.md  MANIFEST.in  PUBLISHING.md  README.md  STATIC_BUILD.md  backlog.md  bump_version.py  custom.css  genHRX_RAG_HLD.md  makefile  pyproject.toml  settings.ini  setup.py  static-build.md  test.md  test_auth_runtime.py  test_build.py  test_content_tree.py  test_extensions.py  test_file_search.py  test_folder_sorting.py  test_helpers_dates.py  test_markdown_renderer.py  test_markdown_title.py  test_page_shell.py  test_search_preview.py  test_sidebar_helpers.py  test_tasks_rendering.py  (+6 more)
.claude/checkpoints/: 202605011617-vyasa-canvas-unclear.md
.vyasa-themes/: kinetic-scholar.toml  serene-manuscript.toml  vyasa-sunlit.toml
.yeshwanth/: agents.md  obsidian-template.md
_plan/: race-conditions.md
bloggy/: __init__.py  _modidx.py  agent.py  build.py  config.py  core.py  helpers.py  layout_helpers.py  main.py
bloggy manual/: README.md  advanced.md  architecture.md  configuration.md  markdown-features.md  mermaid-diagrams.md  security.md  test-mermaid.md  theming.md
bloggy/static/: scripts.js  sidenote.css
demo/: .bloggy  .sesskey  .vyasa  PHASE2_IMPLEMENTATION_PLAN.tasks.md  ai-capabilities-and-limitations.kg.attrs  ai-capabilities-and-limitations.kg.cache  ai-capabilities-and-limitations.kg.nodes  ai-capabilities-and-limitations.kg.palette  ai-capabilities-and-limitations.kg.schema  ai-capabilities-and-limitations.ledger.md  ai-capabilities-and-limitations.md  build_graph_projection.py  canvas-demo.md  cryptograph.md  custom.css  cytograph.md  d2-animation.md  d2-test.md  demo-drawing.excalidraw  demo.md  dollar-escape.md  dummy-tasks.md  getting-started.md  graph-projection-palettes.json  graph-projection.md  grouped-tasks-dense.md  grouped-tasks.md  headings.md  markdown-features.md  mermaids.md  parking-lot-system-design-tasks.md  quantum-mechanics.md  quick-styling-inline-css.md  reveal-slides.md  sprint-4.tasks  sqlite-internals-as-kg.md  tasks-inline.md  traditional-slides.md  vyasa-architecture-system-design-tasks.md  vyasa-slides.md  (+1 more)
demo/ai-capabilities-and-limitations.kg/: chapter-1.kg.edges  chapter-2.kg.edges  chapter-3.kg.edges  chapter-4.kg.edges  chapter-5.kg.edges  chapter-6.kg.edges  chapter-7.kg.edges  chapter-8.kg.edges  chapter-9.kg.edges  kg.attrs  kg.edges  kg.nodes  kg.palette  kg.schema
demo/beginning-of-infinity/: chapter-1.md
demo/birdhouse/: CONTEXT.md  VYASA-CONTEXT-SYNTAX.md  birdhouse.md  story.md
demo/books/: .vyasa
demo/flat-land/: custom.css
demo/guides/: api-authentication.md
demo/maximum-whack-css/: custom.css  demonstration-of-custom-css.md
demo/mdx-demo/: VegaDashboard.jsx  demo.md  demo.state.json  demo.vega.json  mdx-roadmap.state.json  vyasa-bugs.state.json
demo/org-program-board/: README.md  synchronizing-customer-truth.md
demo/pokemon/: .vyasa  README.md  competitive-pokemon.cytree  custom.css  global.css  turn_resolution.py
demo/seizure-warning-trippy-css/: custom.css  global.css  the-entire-history-of-humanity-in-max-whack-mode.md
demo/sqlite-internals.kg/: kg.edges  kg.nodes  kg.schema
demo/wikilinks-lab/: README.md  aliases.md
demo/writing/: markdown-features.md
designs/: abyssal-serenity.md  creative-violet.md  kinetic-scholar.md  vyasa-executive.md  vyasa-sunlit.md
docs/: CNAME  graph-lens-future.md  graph-projection-future.md  graph-projection-palettes.json  index.html  sf-first-visit-transit-itinerary.md  sf-itinerary-palettes.json
docs/.daksh/: manifest.json
docs/posts/: CONTRIBUTING.html  PUBLISHING.html  STATIC_BUILD.html
docs/refactor/: analysis-2.md  analysis-3.md  extensions-tracker.md  extensions.md
docs/static/: head-init.js  header.css  kbd.css  scripts.js  sidenote.css
nbs/: .sesskey  00_core.ipynb  index.ipynb  nbdev.yml
scripts/: cytree_to_json.py  gen_kg_index.py  json_to_cytree.py  kg_query.py  pyright_brief.py
tasks-ui/: package.json
tasks-ui/src/: index.jsx
tests/: test_annotations_ui.py  test_assets.py  test_callouts.py  test_content_backend.py  test_content_tree.py  test_extensions.py  test_git_fetcher.py  test_git_refs.py  test_items_store_contracts.py  test_markdown_renderer.py  test_mdx.py  test_page_shell.py  test_rbac_admin.py  test_tasks_model.py  test_tasks_rendering.py  test_theme_colors.py  test_tree_tables.py
tests_js/: tasks_graph_core.test.mjs
vyasa/: __init__.py  admin_views.py  agent.py  annotations_api.py  api_catalog.py  assets.py  auth_context.py  auth_runtime.py  bookmark_store.py  bookmark_views.py  bookmarks_api.py  bootstrap.py  build.py  chat_bootstrap.py  collab_runtime.py  config.py  content_backend.py  content_routes.py  content_tree.py  core.py  document_pages.py  drawing_auth.py  extensions.py  favicon.py  file_search.py  git_fetcher.py  helpers.py  layout_helpers.py  layout_page.py  live.py  logging.py  main.py  markdown_fence.py  markdown_pipeline.py  markdown_rendering.py  markdown_tokens.py  nav_views.py  page_frame.py  page_shell.py  page_views.py  (+20 more)
vyasa manual/: README.md  advanced.md  architecture.md  configuration.md  custom.css  d2-diagrams.md  markdown-features.md  mermaid-diagrams.md  security.md  theming.md
vyasa/auth/: admin_helpers.py  context.py  flow_helpers.py  http.py  oauth_bootstrap.py  policy.py  runtime.py  views.py
vyasa/extensions_builtin/: __init__.py  api_catalog.py  auth_rbac.py  auth_routes.py  blog_home.py  code_tools.py  default_errors.py  default_favicon.py  default_layout.py  default_search.py  default_search_routes.py  default_theme.py  document_actions.py  filesystem.py  filesystem_routes.py  html_viewer.py  pdf_viewer.py  scoped_custom_css.py  sidebar_routes.py  tree_table.py  (+1 more)
(+227 files in other folders)
