[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vyasa"
version = "0.6.81"
description = "A lightweight, elegant blogging platform built with FastHTML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Yeshwanth"},
]
keywords = ["fasthtml", "blog", "markdown", "htmx", "mermaid", "sidenotes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-fasthtml>=0.6.9",
    "mistletoe>=1.4.0",
    "python-frontmatter>=1.1.0",
    "uvicorn>=0.30.0",
    "monsterui>=0.0.37",
    "loguru>=0.7.3",
    "fastsql>=2.1.2",
    "dulwich>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]
auth = [
    "authlib>=1.3.0",
]

[project.scripts]
vyasa = "vyasa.main:cli"
vyasa-fetch = "vyasa.git_fetcher:main"

[project.urls]
Homepage = "https://github.com/yeshwanth/vyasa"
Repository = "https://github.com/yeshwanth/vyasa"
Issues = "https://github.com/yeshwanth/vyasa/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vyasa", "vyasa.*"]

[tool.setuptools.package-data]
vyasa = [
    "static/*",
    "static/**/*",
    "extensions_builtin/*/static/*",
    "extensions_builtin/*/static/**/*",
    "themes/*.toml",
]

[tool.pyright]
include = ["vyasa"]
exclude = ["**/__pycache__", "**/node_modules", "dist", "build", "tmp", "_proc", "_plan"]
pythonVersion = "3.10"
# Gradual adoption: 'basic' catches real type errors (e.g. wrong argument types)
# without the flood that 'strict' brings to a largely-unannotated codebase.
typeCheckingMode = "basic"
# Third-party deps (fasthtml, monsterui, mistletoe, loguru, ...) ship no stubs;
# their symbols are Unknown, which is fine for gradual typing. Silence that noise
# so the gate surfaces only first-party type errors.
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.uv]
cache-keys = [{file = "pyproject.toml"}]
